# AI-PBPK

./: .coverage  .env.example  Makefile  README.md  pyproject.toml
ai_pbpk/: __init__.py
ai_pbpk/ai_params/: features.py  metrics.py  model.py
ai_pbpk/config/: base.yaml  data.yaml
ai_pbpk/config/experiments/: e1.yaml  e2.yaml  e3.yaml  e4.yaml  e5.yaml
ai_pbpk/data_prep/: loader.py  preprocess.py  schema.py
ai_pbpk/eval/: metrics.py  stats.py
ai_pbpk/experiments/: baselines.py  runner.py
ai_pbpk/mpc/: controller.py  objectives.py
ai_pbpk/pbpk/: model.py  sanity.py  solvers.py
ai_pbpk/report/: build_report.py
ai_pbpk/viz/: cohorts.py  dashboards.py  pareto.py  theme.py
data/raw/: synthetic_nano_tumor.csv
mcp/experiment-runner/: server.py
scripts/: run_experiment.py
tests/: test_figures_exist.py  test_mass_balance.py  test_mpc_dose_constraint.py  test_no_leakage.py  test_stratified_split.py
